[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/FormView/FormView.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/DatabaseView/database_view.gd" type="Script" id=2]
[ext_resource path="res://scenes/SpecificationEditor/SpecificationEditor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/SpecificationEditor/SingleFieldEditor/SingleFieldEditor.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/JobMaker/JobMaker.tscn" type="PackedScene" id=5]

[node name="DatabaseView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TabSelection" type="Panel" parent="."]
anchor_left = 0.0351562
anchor_top = 0.05
anchor_right = 0.953125
anchor_bottom = 0.943333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TabContainer" type="TabContainer" parent="TabSelection"]
anchor_right = 1.0
anchor_bottom = 0.741667
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Jobs" parent="TabSelection/TabContainer" instance=ExtResource( 1 )]

[node name="Sections" parent="TabSelection/TabContainer" instance=ExtResource( 1 )]
visible = false

[node name="Specifications" parent="TabSelection/TabContainer" instance=ExtResource( 1 )]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="TabSelection"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -113.0
margin_bottom = -68.0
alignment = 1

[node name="New Job" type="Button" parent="TabSelection/HBoxContainer"]
margin_left = 326.0
margin_right = 389.0
margin_bottom = 45.0
text = "New Job"

[node name="New Section" type="Button" parent="TabSelection/HBoxContainer"]
margin_left = 393.0
margin_right = 484.0
margin_bottom = 45.0
text = "New Section"

[node name="New Specification" type="Button" parent="TabSelection/HBoxContainer"]
margin_left = 488.0
margin_right = 613.0
margin_bottom = 45.0
text = "New Specification"

[node name="Exit" type="Button" parent="TabSelection"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = -40.0
margin_right = 81.0
margin_bottom = -37.0
text = "Exit"

[node name="SpecificationEditor" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -163.428
margin_right = 288.5
margin_bottom = 163.428

[node name="SectionEditor" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -163.428
margin_right = 288.5
margin_bottom = 163.428

[node name="JobMaker" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="TabSelection/HBoxContainer/New Job" to="." method="_on_New_Job_pressed"]
[connection signal="pressed" from="TabSelection/HBoxContainer/New Section" to="." method="_on_New_Section_pressed"]
[connection signal="pressed" from="TabSelection/HBoxContainer/New Specification" to="." method="_on_New_Specification_pressed"]
